--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ShakerWiki</title>
@@ -8,7 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+
+<body >
+
+<div id="logoConteiner">
+  <h1 id="logo">ShakerWiki</h1>
+</div>
+<hr>
+  <app-root>Загрузка...</app-root>
+
 </body>
+
 </html>
